kubernetes/base/service.yaml
# App Service

apiVersion: v1
kind: Service
metadata:
  name: my-go-app-service
spec:
  type: LoadBalancer
  selector:
    app: my-go-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
