kubernetes/base/ingress.yaml
# Ingress setup
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-go-app
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: my-go-app-service
          servicePort: 80
